# rti

./: .gitignore  CMakeLists.txt  LICENSE  README.md  style-guide.txt
bench/: CMakeLists.txt
bench/rti/: intersect_vs_occluded_all.cpp
benchmark/: CMakeLists.txt  extract_re_histogram.py  run.py
benchmark/other/: cpp-sign.cpp
benchmark/rti/: dummy_benchmark.cpp  intersect_vs_occluded_all.cpp
benchmark/rti/ray/: rectangle_origin_z.cpp
benchmarks/: build.sh  run.sh
benchmarks/do/small.cylinder.fine.d/: cylinder.msh  small.cylinder.fine.msh
benchmarks/do/small.cylinder.medium.d/: cylinder.msh  small.cylinder.geo
cmake/: librtideviceConfig.cmake.in  rtideviceConfig.cmake.in
doc/: Doxyfile  notes.txt
experimental/: CMakeLists.txt
experimental/rti/: multi_intersect.cpp
lib/: CMakeLists.txt
resources/: box.fine.msh  cyl.test.msh
resources/cylinder/: c.msh
resources/gmsh-based/: box.msh  cyl2.msh  small.cylinder.medium.msh  small.cylinder.rough.msh
resources/gmsh-based/cylinder/: c.geo  c45.geo
resources/vtp/: cavity.1.discs.vtp  cavity.1.triangles.vtp
scripts/: stats.rkt
scripts/doc/: create
scripts/executable.aliases.d/: adaptive.test.instance  adaptive.test.instance.single.threaded  adaptive.test.instance.single.threaded.discs.crosspoints_finstack  adaptive.test.instance.single.threaded.discs.crosspoints_status2  adaptive.test.instance.single.threaded.discs.trenches
scripts/gnuplot/: long.cylinder.triangle.geometry.data  long.cylinder.triangle.geometry.gnuplot
scripts/gnuplot/tri.disc.sphere.d/: long.cylinder.tri.disc.sphere.data  script.gnuplot
scripts/misc/: get-distinct.rkt  mod-include-abs-to-relative  stats.rkt
src/: CMakeLists.txt
src/rti/: TestRTIntersect.cpp  Tools.h  Utils.h  absc_geometry_from_gmdh.hpp  absc_geometry_from_gmsh.hpp  boundary_x_y.hpp  bucket_counter.hpp  clo.hpp  command_line_options.hpp  constant_origin.hpp  cos_hemi.hpp  cosine_direction.hpp  cosine_direction_new.hpp  cosine_direction_source.hpp  cstdlib_rng.hpp  device.cpp  device.hpp  device_instantiations.cpp  diffuse_reflection.hpp  disc_geometry_from_gmsh.hpp  disc_origin_x.hpp  dsv_reader.cpp  dummy_counter.hpp  dummy_direction.hpp  dummy_ray_source.hpp  enum_class_hash_function.hpp  gmsh_reader.hpp  i_abs_geometry.hpp  i_boundary.hpp  i_direction.hpp  i_geometry.hpp  i_geometry_from_gmsh.hpp  i_geometry_reader.hpp  i_hit_counter.hpp  i_intersection_handler.hpp  i_origin.hpp  i_ray_source.hpp  i_reflection_model.hpp  i_rng.hpp  kiss_rng.hpp  (+26 more)
src/rti/geo/: absc_boundary.hpp  absc_geometry.hpp  absc_geometry_from_gmsh.hpp  absc_point_cloud_geometry.hpp  bound_condition.hpp  boundary_x_y.hpp  disc_bounding_box_intersector.hpp  disc_geometry_from_gmsh.hpp  disc_neighborhood.hpp  i_abs_geometry.hpp  i_boundary.hpp  i_factory.hpp  i_geometry.hpp  meta_geometry.hpp  oriented_disc_geometry_from_gmsh.hpp  point_cloud_disc_factory.hpp  point_cloud_disc_geometry.hpp  point_cloud_geometry.hpp  point_cloud_sphere_geometry.hpp  sphere_geometry_from_gmsh.hpp  triangle_factory.hpp  triangle_geometry.hpp  triangle_geometry_from_gmsh.hpp
src/rti/io/: gmsh_reader.hpp  i_geometry_reader.hpp  i_point_cloud_reader.hpp  i_triangle_reader.hpp  vtp_point_cloud_reader.hpp  vtp_triangle_reader.hpp  vtp_writer.hpp
src/rti/io/christoph/: vtu_point_cloud_reader.hpp  vtu_triangle_reader.hpp
src/rti/io/xaver/: vtu_point_cloud_reader.hpp
src/rti/main/: dev.cpp  test1.cpp  test2.cpp
src/rti/mc/: rejection_control.hpp
src/rti/particle/: i_particle.hpp  i_particle_factory.hpp
src/rti/ray/: adaptive_origin.hpp  adaptive_rectangle_origin_z.hpp  adaptive_source.hpp  constant_direction.hpp  constant_origin.hpp  cos_hemi.hpp  cosine_direction.hpp  cosine_direction_z.hpp  disc_origin.hpp  disc_origin_x.hpp  disc_origin_z.hpp  dummy_direction.hpp  i_adaptive_origin.hpp  i_direction.hpp  i_origin.hpp  i_source.hpp  non_mc_source.hpp  nonrng_loc_rng_dir_source.hpp  patched_source.hpp  patched_source_aligned_dir.hpp  power_cosine_direction_z.hpp  rectangle_origin_z.hpp  rectangle_origin_z_v2.hpp  rng_loc_nonrng_dir_source.hpp  source.hpp
src/rti/reflection/: diffuse.hpp  i_reflection.hpp  i_reflection_model.hpp  specular.hpp
src/rti/rng/: cstdlib_rng.hpp  i_rng.hpp  kiss_rng.hpp  mt64_rng.hpp  mt64_rng_v2.hpp  non_rng.hpp
src/rti/surface/: i_surface_model.hpp  model.hpp
src/rti/test_and_benchmark/: test_pool.hpp  test_result.hpp  test_run.hpp
src/rti/trace/: absc_context.hpp  bucket_counter.hpp  context.hpp  context_c_wrapper.hpp  counter.hpp  cylinder_bucket_counter.hpp  dummy_counter.hpp  hit_accumulator.hpp  hit_accumulator_combination.hpp  hit_accumulator_with_checks.hpp  i_hit_accumulator.hpp  i_hit_counter.hpp  local_intersector.hpp  point_cloud_context.hpp  point_cloud_context_simplified.hpp  point_cloud_context_w_custom_multi_hit.hpp  result.hpp  tracer.hpp  triangle_context.hpp  triangle_context_simplified.hpp
src/rti/util/: clo.hpp  command_line_options.hpp  enum_class_hash_function.hpp  logger.hpp  ostream_overload_template.hpp  ray_logger.hpp  stats.hpp  timer.hpp  utils.hpp
test/: CMakeLists.txt
test/rti/geo/: disc_bounding_box_intersector.cpp
test/rti/ray/: cosine_direction.cpp  cosine_direction_z.cpp  power_cosine_direction_z.cpp  rectangle_origin_z.cpp
test/rti/trace/: local_intersector.cpp
test/rti/util/: utils.cpp
verification/paraview/: disc_visualization_template.backup.pvsm  disc_visualization_template.pvsm  disc_visualization_template.v2.pvsm  disc_visualization_template.v3.pvsm  paraview-state-input-file-link.vtp
verification/radiosity/: dark2.pal  plot.eps  script.gnuplot
verification/radiosity/analytical_solution/: process.rkt  sp.0.01.data  sp.0.1.data  sp.1.data
verification/radiosity/analytical_solution/original/: flux.sp.0.01.ar.45.txt  flux.sp.0.1.ar.45.txt  flux_sp_1_ar_45.txt  position_sp_1_ar_45.txt
verification/radiosity/data/: sp.0.01.data  sp.0.1.data  sp.0.1.v2.data  sp.1.commit.c0a49d3.data  sp.1.commit.c0a49d3.v2.data  sp.1.data  sp.1.v.new.data  sp.1.v2.data  sp.1.v3.data
(+9 files in other folders)
